@@ -1,4 +1,5 @@
 3.10
+ * Properly format IPv6 addresses when logging JMX service URL (CASSANDRA-12454)
  * Add support to rebuild from targeted replica (CASSANDRA-9875)
  * Add sequence distribution type to cassandra stress (CASSANDRA-12490)
  * "SELECT * FROM foo LIMIT ;" does not error out (CASSANDRA-12154)
